# caenrfidc

./: .gitignore  .sconsign.dblite  Makefile.am  README.md  configure.ac
debian/: caenrfidc.copyright  caenrfidc.postinst  changelog  control  rules
src/: Makefile.am  caenrfidc.c  client.c.old  client.h  cmd_channel.c  cmd_dump_regs.c  cmd_exit.c  cmd_fw_release.c  cmd_help.c  cmd_info.c  cmd_inventory.c  cmd_modulation.c  cmd_power.c  cmd_protocol.c  cmd_radio.c  cmd_read.c  cmd_readpoint.c  cmd_regulation.c  commands.c.old  commands.def  def2c.awk  def2h.awk  macros.h  utils.c  utils.h
