# @configure_input@

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST =	debian/caenrfidc.default \
		debian/changelog  debian/dirs \
		debian/caenrfidc.dirs \
		debian/compat \
		debian/docs \
		debian/caenrfidc.init \
		debian/control \
		debian/gbp.conf \
		debian/caenrfidc.postinst \
		debian/copyright \
		debian/rules

SUBDIRS = 	src
